# Nastya_parser

./: .env  .gitignore  .pdm.toml  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_api.py  run_bot.py  run_scraper.py  t.yml  test.py
.github/workflows/: python-app.yml
docs/: request_example.md
src/: .env  alembic.ini  config.py  main.py  sentry.py  settings.py
src/api/: app.py  auth.py  depends.py  handlers.py
src/api/router/: __init__.py  _routers.py  auth.py  bodies.py  filters.py  post.py  user.py  word.py
src/api/schemas/: auth.py  base.py  word.py
src/bot/: engine.py  main.py  middlewares.py  start_strategy.py
src/bot/commands/: __init__.py  other.py  parse_image.py  quize.py  registration.py  word.py
src/bot/core/: config.py  dispatcher.py  texts.py
src/bot/filters/: auth.py
src/bot/keyboards/: callback_enum.py  inline.py
src/bot/routers/: __init__.py  _router.py  email.py  other.py  parse_image.py  quize.py  reminder.py  word.py
src/bot/states/: __init__.py  registration.py
src/bot/utils/: auth.py
src/broker/: engine.py  middlewares.py
src/broker/tasks/: __init__.py  _reminder.py
src/core/: auth.py  config.py  container.py  containers.py  database.py  depends.py
src/core/caches/: services.py
src/core/database/: __init__.py  base.py
src/core/dto/: base.py
src/core/image/: services.py  usecases.py  validators.py
src/core/mail/: services.py
src/core/posts/: query.py  repository.py
src/core/users/: models.py  schemas.py  services.py  usecases.py
src/core/utils/: services.py
src/core/words/: dto.py  models.py  schemas.py  services.py
src/db/: base.py  types.py
src/db/models/: __init__.py  _post.py  auth.py  user.py  words.py
src/migrations/: env.py
src/migrations/versions/: 2023_05_22_1947-308641f41bc2_.py  2023_07_06_2023-c437e7eb4b22_.py  2023_07_10_2009-ed549592d8ce_.py  2023_08_28_1908-30d035ffe2a9_.py  37c4de6b0df7_.py  7bfce6e58920_.py  93d2ec9ac54a_init.py  be7905623b59_.py  c176c738a4a5_.py  c1870989eeaf_init.py  cfad73abf1d6_.py
src/parsers/: container.py  translate_word.py
src/rabbit/: channel.py  connection.py
src/scrapers/: consumer.py  main.py  scraper.py
src/spider/: items.py  middlewares.py  pipelines.py  settings.py
src/spider/spiders/: cambridge_spider.py
tests/: conftest.py  db_conftest.py
tests/core/words/: conftest.py  test_get_word.py
(+5 files in other folders)
