[project]
name = "PARSER"
version = "0.1"
description = ""
authors = [
    {name = "maksyutov vlad", email = "maksyutov.vlad@gmail.com"},
]
dependencies = [
    "dependency-injector>=4.40.0",
    "SQLAlchemy>=1.4.44",
    "psycopg2>=2.9.5",
    "pydantic>=1.10.2",
    "aioredis>=2.0.1",
    "alembic>=1.8.1",
    "aiogram>=2.23.1",
    "setuptools>=65.6.3",
    "aiohttp>=3.8.3",
    "beautifulsoup4>=4.11.1",
    "scrapy>=2.7.1",
    "python-dotenv>=0.21.0",
    "psycopg2-binary>=2.9.5",
    "redis>=4.4.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
ruf = "pdm run ruff ./src"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "ruff>=0.0.192",
    "mypy>=0.991",
]

[tool.ruff]
extend-exclude = [
    "*/__init__.py",
    "*/texts.py",
]
